<resources>
    <string name="qianbao">我的钱包</string>
    <string name="input_gift_count">填写金额</string>
    <string name="rmb">¥</string>
    <string name="auspicious">恭喜发财,大吉大利</string>
    <string name="btn_send_red_packet">塞钱进红包</string>
    <string name="send_red_packet">发红包</string>
    <string name="best_wishes">恭喜发财，大吉大利!</string>
    <string name="red_tail">查看领取详情 ></string>
    <string name="title_red_packet">红包</string>
    <string name="red_packet_history">红包记录</string>
    <string name="reply_red_thank">回复一句话表示感谢吧！</string>
    <string name="example_red_packet_remain">红包已领取2/3,剩余0.18/2元</string>
    <string name="someone_s_red_packet_place_holder">%s的红包</string>
    <string name="someone_s_red_packet">&#8230;\'s 的红包</string>
    <string name="red_best_lucky">手气最佳</string>
    <string name="example_money">100.00元</string>
    <string name="auth_phone">验证您的手机号</string>
    <string name="auth_phone_tips">%s会发送短信验证手机号码，请输入您的验证码</string>
    <string name="hint_name">请输入手机号</string>
    <string name="get_verf_code">获取验证码</string>
    <string name="wk_login_search">搜索</string>
    <string name="choose_country">选择国家或地区</string>
    <string name="recapture">重新获取</string>
    <string name="hint_verfi">请输入验证码</string>
    <string name="transfer_wait_receive1">待%s确认收款</string>
    <string name="transfer_receive_status1">1天内朋友未确认，将退还给你。</string>
    <string name="transfer_receive_click_status1">重发转账消息</string>
    <string name="transfer_sure_receive">确认收款</string>
    <string name="transfer_time">转账时间：%s</string>
    <string name="transfer_push_receive1">待确认收款</string>
    <string name="transfer_push_receive2">1天内未确认，将退还给对方</string>
    <string name="transfer_push_receive3">已收钱</string>
    <string name="transfer_receive_status2">已存入对方零钱</string>
    <string name="transfer_wait_receive3">已退还(过期)</string>
    <string name="transfer_receive_status3">已退款到零钱，</string>
    <string name="transfer_receive_click_status2">查看零钱</string>
    <string name="transfer_wait_receive2">%s已收钱</string>
    <string name="transfer_receive_time">收钱时间：%s</string>
    <string name="transfer_out_time">退还时间：%s</string>
    <string name="rmb_symbol" translatable="false">￥</string>

    <string name="input_pwd_trans" >请输入支付密码,以验证身份</string>
    <string name="string_zzg">转账给</string>
    <string name="string_zzje">转账金额</string>
    <string name="string_zz">转账</string>
    <string name="string_tjzzsm">添加转账说明</string>
    <string name="string_wdlq">我的零钱</string>
    <string name="string_cz">充值</string>
    <string name="string_tx">提现</string>
    <string name="string_zd">账单</string>
    <string name="string_xgzfmm">修改支付密码</string>
    <string name="string_koihb">Sol红包</string>
    <string name="string_koizz">Sol转账</string>
    <string name="string_fkfs">付款方式</string>
    <string name="string_gg">更改</string>
    <string name="string_lq">零钱</string>
    <string name="string_sqzj">手气最佳</string>
    <string name="string_sje">金额</string>
    <string name="string_count">个数</string>
    <string name="string_ge">个</string>

    <string name="string_lxkfcz">联系客服充值</string>
    <string name="string_lxkftx">联系客服提现</string>
    <string name="string_zjmx">资金明细</string>
    <string name="string_zwsj">暂无数据</string>
    <string name="string_qszzfmm">请设置支付密码</string>
    <string name="string_qszzfmm2">请重新输入支付密码</string>
    <string name="string_ktcg">操作成功</string>
    <string name="string_ktsb">操作失败,后台接口异常</string>
    <string name="string_zfzx">支付中心</string>
    <string name="string_lcmmbyz">两次密码不一致</string>
    <string name="string_xgz">修改中..</string>
    <string name="string_xgcg">修改成功</string>
    <string name="string_pthb">普通红包</string>
    <string name="string_sqhb">手气红包</string>
    <string name="string_hbxq">红包详情</string>
    <string name="string_hbylq">红包已领取</string>
    <string name="string_sy">,剩余</string>
    <string name="string_wlw">，未领完！</string>
    <string name="string_miao">秒</string>
    <string name="string_fen">分</string>
    <string name="string_xiaoshi">小时</string>
    <string name="string_blw">被领完！</string>
    <string name="string_hbylw">，红包已领完！</string>
    <string name="string_max10text">最多输入10个字</string>
    <string name="string_xiugai">修改</string>
    <string name="string_zfz">支付中</string>
    <string name="string_fscg">发送成功</string>
    <string name="string_jszzcg">接收转账成功</string>
    <string name="string_xtcz">系统充值</string>
    <string name="string_czsj">充值时间</string>
    <string name="string_czdh">充值单号</string>
    <string name="string_dqzt">当前状态</string>
    <string name="string_zzsm">转账说明</string>
    <string name="string_zzzg">转账-转给</string>
    <string name="string_zzsj">转账时间</string>
    <string name="string_zffs">支付方式</string>
    <string name="string_zzdh">转账单号</string>
    <string name="string_tkzt">退款状态</string>
    <string name="string_tksj">退款时间</string>
    <string name="string_tkfs">退款方式</string>
    <string name="string_tkdh">退款单号</string>
    <string name="string_zfsj">支付时间</string>
    <string name="string_jydh">交易单号</string>
    <string name="string_sksj">收款时间</string>
    <string name="string_hblz">Sol红包-来自</string>
    <string name="string_hbfg">Sol红包-发给</string>
    <string name="string_zzlz">转账-来自</string>
    <string name="string_srhbgs">请输入红包个数</string>
    <string name="string_hbygq">红包已过期</string>
    <string name="string_lwyb">来晚一步，已经领完啦~</string>
    <string name="string_lqsb">领取失败~</string>
    <string name="string_dkhbyc">打开红包接口异常~</string>
    <string name="string_hblqwb">的红包领取完毕~</string>
    <string name="string_nlql">你领取了~</string>
    <string name="string_dhb">的红包</string>
    <string name="string_lql">领取了</string>
    <string name="string_hb">红包</string>
    <string name="string_dhbcs">的红包超时未领完</string>
    <string name="string_jszz">接收转账</string>
    <string name="string_ysk">已收款</string>
    <string name="string_zzgn">转账给你</string>
    <string name="string_skbjs">的转账被拒收</string>
    <string name="string_zzyhq">的转账已过期</string>
    <string name="balance_hint" >余额(元)</string>
    <string name="recharge_hint">充值</string>
    <string name="withdrawal">提现</string>
    <string name="shoufukuan">收付款</string>
    <string name="jiaoyijilu">交易记录</string>
    <string name="honbaojilu">红包记录</string>
    <string name="pay_pwd_hint">支付密码</string>
    <string name="mianmi_pay">免密支付</string>
    <string name="withdraw_account_hint">提现账户</string>
    <string name="kefu_list">客服列表</string>
    <string name="recharge_fee_hint">充值金额</string>
    <string name="recharge_fee_et_hint">请输入充值金额</string>
    <string name="now_wallet_fee_hint">当前钱包余额</string>
    <string name="next_st_hint">下一步</string>
    <string name="daozhangzhanghu">到账账户</string>
    <string name="choose_daodaozhanghu">请选择到账账户类型</string>
    <string name="withdraw_fee_hint">提现金额</string>
    <string name="keyongyue_hint">可用余额</string>
    <string name="all_withdraw_hint">全部提现</string>
    <string name="withdrawal_hint_st">提现说明</string>
    <string name="bank_cards">银行卡</string>
    <string name="add_bank_cards_hint">添加银行卡</string>
    <string name="bank_cards_info_hint">银行卡信息</string>
    <string name="bank_cards_type_hint">卡类型</string>
    <string name="bank_cards_phone_hint">手机号码</string>
    <string name="bank_cards_name_hint">持卡人</string>
    <string name="bank_cards_name">名字</string>
    <string name="bank_cards_num_hint">卡号</string>
    <string name="bank_cards_name_num">持卡人本人银行卡号</string>
    <string name="bank_card_phone_hint">请输入银行预留的手机号</string>
    <string name="shiming_hint">实名认证信息</string>
    <string name="cert_type_hint">证件类型</string>
    <string name="shenfenzheng">身份证</string>
    <string name="cert_number_hint">证件号码</string>
    <string name="shiming_real_name">真实姓名</string>
    <string name="shiming_real_name_input_hint">请输入真实姓名</string>
    <string name="redpackage_mianmi_hint">红包免密</string>
    <string name="zhuanzhang_mianmi_hint">转账免密</string>

</resources>
